# matlas

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-07-03-cleartxn-design.md  2026-07-03-matlas-design.md
scripts/: build_gazetteer_in.py  build_gazetteer_us.py  run_benchmark_us.py  run_smoke_india.py
src/matlas/: api.py  batch.py  cli.py  config.py  mcp_server.py  router.py
src/matlas/core/: loop.py  schema.py  shared_category.py  validator.py  websearch_tool.py
src/matlas/eval/: gold.py  harness.py  judge.py  report.py
src/matlas/regions/: base.py
src/matlas/regions/india/: __init__.py  gazetteer.in.jsonl  normalizer.py  resolver_vpa.py  taxonomy_map.py  vpa_handles.py
src/matlas/regions/us/: __init__.py  gazetteer.us.jsonl  mcc_table.py  normalizer.py  resolver_mcc.py  taxonomy_map.py
tests/: test_api.py  test_batch.py  test_cli.py  test_config.py  test_mcp_server.py  test_router.py
tests/core/: test_agent_replay.py  test_schema.py  test_shared_category.py  test_validator.py  test_websearch_tool.py
tests/eval/: test_gold.py  test_harness.py  test_judge.py  test_report.py
tests/live/: test_enrich_live.py
tests/regions/india/: test_india_pack.py  test_normalizer.py  test_resolver_vpa.py  test_taxonomy_map.py  test_vpa_handles.py
tests/regions/us/: test_mcc_table.py  test_normalizer.py  test_resolver_mcc.py  test_taxonomy_map.py  test_us_pack.py
