[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matlas"
version = "0.1.0"
description = "Turn messy bank/card transaction descriptors into clean structured data — US and India, agentically."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "matlas contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "pydantic>=2.13.4,<3",
  "pydantic-settings>=2.14.2,<3",
  "typer>=0.26.8,<1",
  "rich>=15.0.0,<16",
  "iso18245>=1.4.1,<2",
  "rapidfuzz>=3.14.5,<4",
  "cleanco>=2.3,<3",
  "anthropic>=0.116.0,<1",
  "pandas>=3.0.3,<4",
]

[project.optional-dependencies]
# Week 2+: api.py / mcp_server.py land later; no Week-1 file imports these.
api = ["fastapi>=0.139.0,<1", "uvicorn>=0.49.0,<1", "mcp>=1.28.1,<2"]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.scripts]
matlas = "matlas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/matlas"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
packages = ["matlas"]

[[tool.mypy.overrides]]
module = "cleanco.*"
ignore_missing_imports = true
